Fix High Contrast for MS edge 15
Fixes: CNVS-38996

If this style rule is included, the entire page
Crashes in Edge 15. Not a server error, not a JS
error, Edge itself crashes.

UI-Devs: if you still want to have this different
box-shadow in High Contrast mode, you could maybe
toy with why it caused the page to crash or do it in a way
That it doesn’t apply to Edge 15. But deleting it was
The easiest way I found to fix the problem

Test plan:
* in edge 15 (you can go to modern.ie and launch a live edge 15 from 
  your normal browser for free)
* log in and set your user settings to use high contrast
* go to any page
* edge should not crash and the page should display correctly

Reviewed-on: https://gerrit.instructure.com/127216
Tested-by: Jenkins
QA-Review: Jeremy Putnam <jeremyp@instructure.com>
Product-Review: Ryan Shaw <ryan@instructure.com>

--- a/app/stylesheets/base/_ic_app_header.scss
+++ b/app/stylesheets/base/_ic_app_header.scss
@@ -278,10 +278,6 @@ button.ic-app-header__menu-list-link {
   background: var(--ic-brand-global-nav-menu-item__badge-bgd);
   color: var(--ic-brand-global-nav-menu-item__badge-text);
   @include primary-nav-badge-border(var(--ic-brand-global-nav-bgd));
-
-  @if $use_high_contrast {
-    box-shadow: 0 0 0 2px $ic-color-light;
-  }
 }
 
 .ic-app-header__logomark-container {
